fixed scroll issues on Safari

--- a/client/styles/layout/_layouts.scss
+++ b/client/styles/layout/_layouts.scss
@@ -33,21 +33,43 @@
 
 
 html {
-    position: relative;
     min-height: 100%; // important!
-    height: 100%; // important!
     background: none; // important!, fix angular-material css cause sidebar background to break bug
+}
+
+html,
+body {
+  height: 100%;
+  position: relative;
+}
+
+.content-container,
+.content-container > .view-container,
+.content-container > .view-container > ui-view,
+.content-container > .view-container > ui-view > *,
+.main-container {
+  display: block;
+  height: 100%;
+  max-height: 100%;
+  overflow: hidden;
+}
+
+.page-wrapper {
+  display: block;
+  height: 100%;
+  max-height: 100%;
+  overflow-y: auto;
+  overflow-x: hidden;
 }
 
 // default
 .app {
     position: relative;
     min-height: 100%; // important!
-    height: auto; // important!
-
-    &.md-menu-is-open {
-        max-height: 100%;
-    }
+    height: 100%;
+    max-width: 100%;
+    max-height: 100%;
+    overflow: hidden;
 
     > .header-container {
         &.header-fixed {
